--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-paper": "^3.12.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.11.1",
