--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.77.1",
     "react-native-calendars": "^1.1309.0",
     "react-native-color-picker": "^0.6.0",
+    "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-linear-gradient": "^2.8.3",
