--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,8 @@
 BASE_URL = http://192.168.1.7:5000
+
+# Use Qwen Model
+MODEL_NAME = "Qwen2-0.5B-Instruct"
+HF_TO_GGUF = {
+  "Qwen2-0.5B-Instruct": "Qwen/Qwen2.5-0.5B-Instruct-GGUF",
+}
+GGUF_FILE = "qwen2.5-0.5b-instruct-q4_k_m.gguf"
