--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,13 +16,17 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.8.2",
     "expo-font": "^13.0.3",
+    "llama.rn": "^0.5.4",
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-calendars": "^1.1309.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.5",
+    "react-native-device-info": "^14.0.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
