--- a/Frontend/.env
+++ b/Frontend/.env
@@ -2,7 +2,6 @@ BASE_URL = http://192.168.1.7:5000
 
 # Use Qwen Model
 MODEL_NAME = "Qwen2-0.5B-Instruct"
-HF_TO_GGUF = {
-  "Qwen2-0.5B-Instruct": "Qwen/Qwen2.5-0.5B-Instruct-GGUF",
-}
+HF_TO_GGUF = "Qwen/Qwen2.5-0.5B-Instruct-GGUF",
 GGUF_FILE = "qwen2.5-0.5b-instruct-q4_k_m.gguf"
+DOWNLOAD_URL = `https://huggingface.co/${HF_TO_GGUF[MODEL_NAME]}/resolve/main/${GGUF_FILE}`
