--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,7 +40,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-bottom-tabs": "^1.0.2"
+    "react-navigation-bottom-tabs": "^1.0.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
