--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.2",
     "expo-font": "^13.0.3",
     "llama.rn": "^0.5.4",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-calendars": "^1.1309.0",
